2004-04-11: cvs - Hin-Tak Leung
   . 6200L bug. 

2004-01-16: cvs - Hin-Tak Leung
   . Sync with linuxprinting.org and correcting XML files to 
     address cups compatibility issues.

2004-01-14: cvs - Hin-Tak Leung
   . Added user-contributed foomatic install script for Debian.

2003-12-02: cvs - Hin-Tak Leung
   . Adding 6200L - just making it do 6100L stuff for the time being.
	
2003-09-14: cvs - Roberto Ragusa
   . Ooops, forgot to activate the polling on 6100L.

2003-09-10: cvs - Hin-Tak Leung
   . Added prelimary null transport skeleton code to debug bid problems.

2003-09-08: cvs - Roberto Ragusa
   . Added epl_61interpret.c.
   . First attempt to do (free mem) flow control on 6100L.

2003-09-04: cvs - Roberto Ragusa
   . Unified all sleeping functions into sleep_seconds(double s).
   . We try to accurately detect how big is the buffer of the printer
     (this will be useful for future enhancements).
   . Flow control is now more cleanly integrated. At the moment
     there are two speed limiters: a stripe to stripe delay
     (used only for 5700L) and a closed-loop free mem delay
     (5800L, 5900L only; it should work for 5700L too but it's
     disabled because htl doesn't want it :-) ).
   . The free mem flow control now uses a better estimation
     algorithm.
   . Small misc fixes (code style, debug output).
   . Added epl_time.c, a lot of code has been moved around.

2003-07-18: cvs - Hin-Tak Leung
   . fixing the autoconf code to detect correctly kernel versions of the form
     "2.4.21-0.13mdk" (extra dot) reported for mandrake 9.x.  

2003-05-07: cvs - Roberto Ragusa
   . Small fixes.

2003-05-04: cvs - Roberto Ragusa
   . Misc fixes to epl_59interpret.c, epl_bid_replies.c and docs.
   . Added README.FlowControl.

2003-05-04: cvs - Hin-Tak Leung
   . 2nd try at fixing libieee1284 memory allocation problem, + misc.

2003-05-02: cvs - Hin-Tak Leung
   . fix libieee1284 memory allocation problem.

2003-05-01: cvs - Roberto Ragusa