@@ -1,3 +1,6 @@
+2004-06-02: cvs - Hin-Tak Leung
+   . ppc 'unsigned char'/x86 'signed char' fix in epl_compress.c
+	
 2004-04-11: cvs - Hin-Tak Leung
    . 6200L bug. 
 
